app/assets/sass/dri/dri_layouts.scss
@import "bootstrap-sprockets";
@import "bootstrap.scss";

/* for bootstrap3 */
@import "video-js";
@import "colorbox-rails";
@import "font-awesome";
/*Import the Zen Grids files*/
@import "dri_base.scss";
@import "../zen/_grids.scss";
@import "../zen/_base.scss";
@import "../zen/_background";
@import "dri.scss";
@import "dri_pages.scss";
@import "social-share-button.scss";




.dri_wrapper {
	$zen-column-count:4;
	width:1024px;
	margin:auto;
}

.dri_header_container {
    padding-top: 20px;

  	@include zen-grid-container;
  	.dri_authentication_search_container {

    float:right;
    	.dri_authentication_menus_container {
  
      }
      .dri_search_term_input {
  
      }
    
  	}
	 	

	  .dri_social_media_container {
	
		float: left;
		padding-left: 50px;
		}
		
	 .dri_ident {
	   width: 300px;
	   float: left;

	}

  

}

.navbar-fixed-top {
  position: relative;
}


.dri_search_features_nav_container {
		
}

.dri_facet_restrictions_container {
   @include zen-grid-container;
	 @include zen-grid-flow-item(4, 4, $alpha-gutter: 0px);
	 margin-left: 0px;
	 padding-left: 10px;

}

.dri_welcome_block {
	@include zen-grid-item(1.3, 1, $gutter-width: 0);

}

.dri_slideshow_block {
	@include zen-grid-item(2.5, 2.5);
	padding-top: 30px;
	margin-bottom: 20px;

}
.dri_home_title {
	@include zen-grid-item(3.85, 1, $gutter-width: 0);
	
}

.dri_main_content_container {

  	@include zen-grid-item(4, 1);
  	margin-left: 10px;
  	
  	.dri_login_form_container {

  	margin: auto;
	  max-width:450px;
  		
  	}
  	 	
  	.dri_first_navigation_container {
  	  	display: none;
  		@include zen-grid-item(1, 1, $gutter-width: 0px);

  	}
  	
  	.dri_second_navigation_container {
  		@include zen-grid-item(1, 4, $gutter-width: 0px);

  	}
  	
  	.dri_result_container {
  	  	@include zen-grid-item(3, 1, $gutter-width: 0px);
  	}
	
	  .dri_home_container {
        @include zen-grid-item(3, 1, $gutter-width: 0px);
    }
  	

  	.dri_object_container {
  	  	@include zen-grid-item(4, 1, $gutter-width: 0px);
  	}
  	
 
	
	.dri_object_first_block {
		@include zen-grid-item(2.5, 1, $gutter-width: 0px);
		@include zen-clear();

		
	}
	
	.dri_object_second_block {
		@include zen-grid-item(1, 3.5, $gutter-width: 0px);
		width:250px;



	}
	.dri_object_institutes_block {
		@include zen-grid-item(4, 1, $gutter-width: 0px);
				@include zen-clear();
				
				.dri_institutes_show_more {
				 	@include zen-clear();
				}

	}
	//* User Accounts *//
  
  .dri_account_block {
    
    .dri_account_block_heading {
      @include zen-grid-item(1, 1, $gutter-width: 0px);
    }
    .dri_account_block_info {
      @include zen-grid-item(1.5, 2, $gutter-width: 0px);
   
      
    }
    
  }
}
	
//Static Pages
.dri_collection_institutes_pages {

  .dri_collection_institutes_pages_img {
        @include zen-grid-item(1.5, 1, $gutter-width: 0px);
  }	
  
  .dri_collection_institutes_pages_text {
        @include zen-grid-item(2.5, 2.5, $gutter-width: 0px);
  }

}

.dri_clearfix {
  @include zen-clear();
}


@media screen and (max-width:1100px) {
	
.dri_wrapper {
	width: 768px;
	margin: 0 auto;
	$zen-column-count:3;
	
	.dri_header_container {
	  padding-bottom: 20px;
        .dri_search_term_text_input {

          margin: 15px 0 0 0;
          clear:right;

        }

    @include zen-grid-container;
    
    .dri_authentication_search_container {

      float:right;
        


    
    }
    

    .dri_social_media_container {

              padding-left: 30px;

      .dri_social_media_nav {
              margin-top: 45px;

      }
  
    }
    
    .dri_ident {
      background: image-url($dri_logo_small_url);
      background-repeat: no-repeat;
      width: 230px;
      height: 77px;
      margin-left: 3px;
    }

  

}

}

.dri_search_features_nav_container {
  
  .dri_search_save_submit_button {
  clear:both;
}
}
.dri_main_content_container {

  .dri_result_object {
  
      .dri_content_list_collection {
      width: 450px;
      
        .dri_content_list_collection_data {
          width: 280px;
         
      }
    }
  }
  
    .dri_result_container {
        @include zen-grid-item(2, 1, $gutter-width: 0px);
        
    }
    .dri_second_navigation_container {
      @include zen-grid-item(1, 3, $gutter-width: 0px);

    }
    
    .dri_object_second_block {
      //@include zen-clear();
      @include zen-grid-item(1, 3, $gutter-width: 0px);
    }
    .dri_object_first_block {
      //@include zen-clear();
      @include zen-grid-item(2, 1, $gutter-width: 0px);
    }
    


.dri_home_title h2 {
	width: 100%;

}
    
.dri_asset_holder {
			margin: 20px 0 0 0;
			padding-right: 20px;
			max-width: 100%;
			display: block;
	}


.dri_browse_sort_tabs {
	margin: 0 0 0 0;
	padding: 0;
	float: left;
	width: 81%;
	border-bottom: 1px solid #D9DADB;
}
	

}

.dri_funder_institutes {
  li {
    height: 40px;
  }
  img {
    max-height:40px;
  }
}


}





@media only screen and (max-width: 766px) {

  .dri_wrapper {
    max-width: 760px;
    width: 100%;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0 auto;
    margin-top: 60px;
    $zen-column-count:2;
    .dri_header_container {
      .dri_ident {
          background: image-url($dri_logo_tiny_url);
          background-repeat: no-repeat;
          width: 100px;
          height: 50px;
          margin-left: 3px;
      }
    }
  }
.dri_main_content_container {
  @include zen-grid-container;
    @include zen-grid-item(2, 1);
    margin-left: 10px;
    .dri_result_container {
      @include zen-clear();
      @include zen-grid-item(2, 1, $gutter-width: 0px);
      
    }
    
    .dri_second_navigation_container {
      @include zen-float();
      @include zen-grid-item(2, 1, $gutter-width: 0px);

    }
    .dri_object_second_block {
            @include zen-clear();
      @include zen-grid-item(2, 1, $gutter-width: 0px);
      width: 100%;
    }
    .dri_object_first_block {
      @include zen-clear();
      @include zen-grid-item(2, 1, $gutter-width: 0px);
        dl.dri_object_metadata_readview {
          padding: 0px 20px 0 0;
        }
      }
    .dri_login_form_container {

    margin: auto;
    max-width:100%;
    .dri_login_form_block {
      padding: 10% 0 10% 15%;
      input {
        max-width: 80%;
      }
      .dri_form_text {
        max-width: 80%;
        a.text_right {
          float: left;
        }
        .dri_signin_socialmedia {
          width:100%;
          .dri_signin_edugate {
            width: 100%;
          }
        }
      }
    }
      
    }
}

.navbar-fixed-top {
  position: fixed;
  .container-fluid {
    padding-left: 10px;
  }
}
    
  .dri_home_container, #dri_rss_feed_id {
    display:none;
  }
  
 .dri_slideshow_block {
   padding-top: 0px;
   @include zen-clear();
   @include zen-grid-item(2, 1, $gutter-width: 10px);
   .carousel-indicators {
     display:none;
   }
 }
 
  .dri_welcome_block {
    @include zen-grid-item(2, 1, $gutter-width: 0);
  
  }
  
  .dri_facet_restrictions_container {

   @include zen-grid-flow-item(1, 1, $alpha-gutter: 10px);

}

.dri_funder_institutes {
  li {
    max-height: 25px;
  }
  img {
    max-height:25px;
  }
}
}

